fix extra padding for cosistency in docdashboard with userdashboard

--- a/client/src/Pages/DocDashboard/docdashboard.module.css
+++ b/client/src/Pages/DocDashboard/docdashboard.module.css
@@ -57,7 +57,7 @@
 
 @media (min-width: 768px) {
    .userbody {
-      padding-top: 6.5rem;
+      /* padding-top: 6.5rem; */
    }
 
    .container {
